--- a/app/src/main/res/layout/content_event_manager.xml
+++ b/app/src/main/res/layout/content_event_manager.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -10,71 +10,101 @@
 
     <Button
         android:id="@+id/btnCreate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="247dp"
+        android:layout_height="46dp"
         android:layout_above="@+id/btnEdit"
         android:layout_alignParentEnd="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentStart="true"
-        android:layout_marginBottom="46dp"
+        android:background="@color/colorPrimary"
         android:onClick="buttonOnClick"
         android:text="Create event"
-        tools:layout_editor_absoluteX="105dp"
-        tools:layout_editor_absoluteY="111dp" />
+        android:layout_marginBottom="29dp"
+        app:layout_constraintBottom_toTopOf="@+id/btnEdit"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView24"
+        app:layout_constraintHorizontal_bias="0.505"
+        app:layout_constraintVertical_bias="0.962" />
 
     <Button
         android:id="@+id/btnEdit"
-        android:layout_width="123dp"
-        android:layout_height="47dp"
-        android:text="Edit Events"
-        android:onClick="buttonOnClick"
-        tools:layout_editor_absoluteX="105dp"
-        tools:layout_editor_absoluteY="202dp"
-        android:layout_marginBottom="41dp"
+        android:layout_width="247dp"
+        android:layout_height="46dp"
         android:layout_above="@+id/btnDelete"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="33dp"
+        android:background="@color/colorPrimary"
+        android:onClick="buttonOnClick"
+        android:text="Edit Events"
+        app:layout_constraintBottom_toTopOf="@+id/btnDelete"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHorizontal_bias="0.505" />
 
     <Button
         android:id="@+id/btnDelete"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Delete Events"
-        android:onClick="buttonOnClick"
-        tools:layout_editor_absoluteX="105dp"
-        tools:layout_editor_absoluteY="286dp"
-        android:layout_marginBottom="28dp"
+        android:layout_width="247dp"
+        android:layout_height="46dp"
         android:layout_above="@+id/btnFeedback"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="31dp"
+        android:background="@color/colorPrimary"
+        android:onClick="buttonOnClick"
+        android:text="Delete Events"
+        app:layout_constraintBottom_toTopOf="@+id/btnFeedback"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHorizontal_bias="0.505" />
 
     <Button
         android:id="@+id/btnFeedback"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="View Events Feedback"
-        android:onClick="buttonOnClick"
-        tools:layout_editor_absoluteX="78dp"
-        tools:layout_editor_absoluteY="380dp"
-        android:layout_marginBottom="105dp"
+        android:layout_width="247dp"
+        android:layout_height="46dp"
         android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentStart="true"
+        android:background="@color/colorPrimary"
+        android:onClick="buttonOnClick"
+        android:text="View Events Feedback"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="86dp"
+        app:layout_constraintHorizontal_bias="0.505" />
 
     <TextView
         android:id="@+id/textView24"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="232dp"
+        android:layout_height="49dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="35dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="49dp"
         android:text="Manage events"
-        android:textSize="24sp" />
-</RelativeLayout>
+        android:textAlignment="center"
+        android:textSize="30sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+</android.support.constraint.ConstraintLayout>
