--- a/app/src/main/res/layout/content_resident_access.xml
+++ b/app/src/main/res/layout/content_resident_access.xml
@@ -23,6 +23,7 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginTop="148dp"
+        android:background="@color/colorPrimary"
         android:onClick="buttonOnClick"
         android:paddingBottom="20dp"
         android:paddingTop="20dp"
@@ -38,6 +39,7 @@
         android:layout_alignStart="@+id/btnLoginResidentAccess"
         android:layout_below="@+id/btnLoginResidentAccess"
         android:layout_marginTop="71dp"
+        android:background="@color/colorPrimary"
         android:onClick="buttonOnClick"
         android:paddingBottom="20dp"
         android:paddingTop="20dp"
