--- a/app/src/main/res/layout/content_event_list.xml
+++ b/app/src/main/res/layout/content_event_list.xml
@@ -31,6 +31,7 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
         android:layout_weight="1"
+        android:background="@color/colorPrimary"
         android:onClick="buttonOnClick"
         android:text="Search Event"
         tools:ignore="HardcodedText" />
