--- a/app/src/main/res/layout/content_event_page.xml
+++ b/app/src/main/res/layout/content_event_page.xml
@@ -62,22 +62,24 @@
                 android:id="@+id/btnCheckout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
+                android:background="@color/colorPrimary"
                 android:enabled="false"
                 android:onClick="buttonOnClick"
                 android:text="Check Out"
-                android:visibility="invisible"
-                android:layout_alignParentBottom="true"
-                android:layout_centerHorizontal="true" />
+                android:visibility="invisible" />
 
             <Button
                 android:id="@+id/btnCheckIn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
+                android:background="@color/colorPrimary"
                 android:onClick="buttonOnClick"
                 android:text="Check in"
-                tools:ignore="HardcodedText"
-                android:layout_alignParentBottom="true"
-                android:layout_centerHorizontal="true" />
+                tools:ignore="HardcodedText" />
 
             <TextView
                 android:id="@+id/txt_event_location"
