--- a/app/src/main/res/layout/content_resident_login.xml
+++ b/app/src/main/res/layout/content_resident_login.xml
@@ -55,6 +55,7 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="58dp"
+        android:background="@color/colorPrimary"
         android:onClick="buttonOnClick"
         android:text="Login" />
 
