--- a/app/src/main/res/layout/list_group_item.xml
+++ b/app/src/main/res/layout/list_group_item.xml
@@ -8,8 +8,9 @@
         android:id="@+id/lblListItem"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingBottom="8dp"
         android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft"
-        android:paddingTop="5dp"
+        android:paddingTop="8dp"
         android:textSize="16dp"
         tools:text="sub Item" />
 </LinearLayout>
