--- a/app/src/main/res/layout/content_event_list.xml
+++ b/app/src/main/res/layout/content_event_list.xml
@@ -19,7 +19,8 @@
         android:layout_height="35dp"
         android:layout_alignBottom="@+id/btnSearch"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentStart="true"
+        >
 
     </SearchView>
 
