--- a/app/src/main/res/layout/content_event_list.xml
+++ b/app/src/main/res/layout/content_event_list.xml
@@ -28,14 +28,29 @@
         android:id="@+id/btnSearch"
         android:layout_width="wrap_content"
         android:layout_height="38dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
         android:layout_weight="1"
         android:background="@color/colorPrimary"
         android:onClick="buttonOnClick"
         android:text="Search Event"
-        tools:ignore="HardcodedText" />
+        tools:ignore="HardcodedText"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/floatingActionAwards"
+        android:layout_width="wrap_content"
+        android:layout_height="67dp"
+        android:layout_alignBottom="@+id/spinnerFilter"
+        android:layout_alignEnd="@+id/btnSearch"
+        android:layout_alignRight="@+id/btnSearch"
+        android:layout_below="@+id/btnSearch"
+        android:clickable="true"
+        android:visibility="visible"
+        app:backgroundTint="@android:color/transparent"
+        app:fabSize="normal"
+        app:rippleColor="@android:color/transparent"
+        app:srcCompat="@drawable/trophy" />
 
     <TextView
         android:id="@+id/textView7"
@@ -54,13 +69,12 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:spinnerMode="dropdown"
-        android:layout_alignBottom="@+id/textView7"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_toRightOf="@+id/textView7"
-        android:layout_toEndOf="@+id/textView7" />
+        android:layout_alignTop="@+id/textView7"
+        android:layout_centerHorizontal="true" />
+
 
     <ScrollView
+        android:id="@+id/EventScrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentLeft="true"
@@ -84,9 +98,8 @@
                 android:layout_height="389dp"
                 android:layout_alignParentBottom="true"
                 android:background="#FEFCFF">
-
-
             </ListView>
+
         </LinearLayout>
     </ScrollView>
 
