--- a/app/src/main/res/layout/content_resident_register.xml
+++ b/app/src/main/res/layout/content_resident_register.xml
@@ -17,20 +17,20 @@
         android:id="@+id/ResidentName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/txtName"
-        android:layout_alignBottom="@+id/txtName"
+        android:layout_alignBaseline="@+id/accountName"
+        android:layout_alignBottom="@+id/accountName"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginLeft="19dp"
         android:layout_marginStart="19dp"
-        android:layout_toLeftOf="@+id/txtName"
-        android:layout_toStartOf="@+id/txtName"
+        android:layout_toLeftOf="@+id/accountName"
+        android:layout_toStartOf="@+id/accountName"
         android:text="@string/name"
         android:textSize="18sp"
         android:textStyle="bold" />
 
     <EditText
-        android:id="@+id/txtName"
+        android:id="@+id/accountName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
@@ -58,9 +58,9 @@
         android:id="@+id/txtEmail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/txtName"
-        android:layout_alignStart="@+id/txtName"
-        android:layout_below="@+id/txtName"
+        android:layout_alignLeft="@+id/accountName"
+        android:layout_alignStart="@+id/accountName"
+        android:layout_below="@+id/accountName"
         android:layout_marginTop="34dp"
         android:ems="10"
         android:hint="@string/enter_eagle_email"
